force-app/main/default/objects/Fm_Test_Dmo_Row__c/Fm_Test_Dmo_Row__c.object-meta.xml
<CustomObject>
    <description>Internal test-only stand-in. Carries the camelCase field shape the GenAI Audit DMOs use (userId__c, gatewayRequestId__c, etc.) so AiInsightsTestUtil can fabricate a non-null SObject with `r.get('userId__c')` semantics in package-validation scratch orgs where Data Cloud DMOs aren't provisioned. NOT for customer use; the FluentMetric_AI_User permission set deliberately omits this object.</description>
    <label>FM Test DMO Row</label>
    <nameField>
        <displayFormat>FMT-{0000}</displayFormat>
        <label>Row Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FM Test DMO Rows</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>