force-app/main/default/objects/Fm_Test_Dmo_Row__c/fields/action__c.field-meta.xml
<CustomField>
    <fullName>action__c</fullName>
    <description>Test stand-in for GenAIFeedback__dlm.action__c.</description>
    <label>action</label>
    <length>40</length>
    <type>Text</type>
</CustomField>