force-app/main/default/objects/Fm_Test_Dmo_Row__c/fields/category__c.field-meta.xml
<CustomField>
    <fullName>category__c</fullName>
    <description>Test stand-in for GenAIContentCategory__dlm.category__c.</description>
    <label>category</label>
    <length>80</length>
    <type>Text</type>
</CustomField>