force-app/main/default/objects/Fm_Test_Dmo_Row__c/fields/completionTokens__c.field-meta.xml
<CustomField>
    <fullName>completionTokens__c</fullName>
    <description>Test stand-in for GenAIGatewayRequest__dlm.completionTokens__c.</description>
    <label>completionTokens</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>