force-app/main/default/objects/Fm_Test_Dmo_Row__c/fields/feature__c.field-meta.xml
<CustomField>
    <fullName>feature__c</fullName>
    <description>Test stand-in for GenAIGatewayRequest__dlm.feature__c.</description>
    <label>feature</label>
    <length>120</length>
    <type>Text</type>
</CustomField>