force-app/main/default/objects/Fm_Test_Dmo_Row__c/fields/feedback__c.field-meta.xml
<CustomField>
    <fullName>feedback__c</fullName>
    <description>Test stand-in for GenAIFeedback__dlm.feedback__c.</description>
    <label>feedback</label>
    <length>40</length>
    <type>Text</type>
</CustomField>