force-app/main/default/objects/Fm_Test_Dmo_Row__c/fields/gatewayRequestId__c.field-meta.xml
<CustomField>
    <fullName>gatewayRequestId__c</fullName>
    <description>Test stand-in for GenAIGatewayRequest__dlm.gatewayRequestId__c.</description>
    <label>gatewayRequestId</label>
    <length>64</length>
    <type>Text</type>
</CustomField>