force-app/main/default/objects/Fm_Test_Dmo_Row__c/fields/generationId__c.field-meta.xml
<CustomField>
    <fullName>generationId__c</fullName>
    <description>Test stand-in for GenAIGeneration__dlm.generationId__c.</description>
    <label>generationId</label>
    <length>64</length>
    <type>Text</type>
</CustomField>