force-app/main/default/objects/Fm_Test_Dmo_Row__c/fields/generationRequestId__c.field-meta.xml
<CustomField>
    <fullName>generationRequestId__c</fullName>
    <description>Test stand-in for GenAIGatewayResponse__dlm.generationRequestId__c.</description>
    <label>generationRequestId</label>
    <length>64</length>
    <type>Text</type>
</CustomField>