force-app/main/default/objects/Fm_Test_Dmo_Row__c/fields/generationResponseId__c.field-meta.xml
<CustomField>
    <fullName>generationResponseId__c</fullName>
    <description>Test stand-in for GenAIGatewayResponse__dlm.generationResponseId__c.</description>
    <label>generationResponseId</label>
    <length>64</length>
    <type>Text</type>
</CustomField>