force-app/main/default/objects/Fm_Test_Dmo_Row__c/fields/isToxicityDetected__c.field-meta.xml
<CustomField>
    <fullName>isToxicityDetected__c</fullName>
    <description>Test stand-in for GenAIContentQuality__dlm.isToxicityDetected__c. Stored as Text 'true' / 'false' to match production GenAI DMO semantics (the live DMO field is a string, not Boolean).</description>
    <label>isToxicityDetected</label>
    <length>10</length>
    <type>Text</type>
</CustomField>