force-app/main/default/objects/Fm_Test_Dmo_Row__c/fields/model__c.field-meta.xml
<CustomField>
    <fullName>model__c</fullName>
    <description>Test stand-in for GenAIGatewayRequest__dlm.model__c.</description>
    <label>model</label>
    <length>120</length>
    <type>Text</type>
</CustomField>