force-app/main/default/objects/Fm_Test_Dmo_Row__c/fields/parent__c.field-meta.xml
<CustomField>
    <fullName>parent__c</fullName>
    <description>Test stand-in for the GenAI DMO parent__c business-key field (links Quality and Category rows up the chain).</description>
    <label>parent</label>
    <length>64</length>
    <type>Text</type>
</CustomField>