force-app/main/default/objects/Fm_Test_Dmo_Row__c/fields/prompt__c.field-meta.xml
<CustomField>
    <fullName>prompt__c</fullName>
    <description>Test stand-in for GenAIGatewayRequest__dlm.prompt__c.</description>
    <label>prompt</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>