force-app/main/default/objects/Fm_Test_Dmo_Row__c/fields/promptTemplateDevName__c.field-meta.xml
<CustomField>
    <fullName>promptTemplateDevName__c</fullName>
    <description>Test stand-in for GenAIGatewayRequest__dlm.promptTemplateDevName__c.</description>
    <label>promptTemplateDevName</label>
    <length>200</length>
    <type>Text</type>
</CustomField>