force-app/main/default/objects/Fm_Test_Dmo_Row__c/fields/promptTokens__c.field-meta.xml
<CustomField>
    <fullName>promptTokens__c</fullName>
    <description>Test stand-in for GenAIGatewayRequest__dlm.promptTokens__c.</description>
    <label>promptTokens</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>