force-app/main/default/objects/Fm_Test_Dmo_Row__c/fields/responseText__c.field-meta.xml
<CustomField>
    <fullName>responseText__c</fullName>
    <description>Test stand-in for GenAIGeneration__dlm.responseText__c.</description>
    <label>responseText</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>