force-app/main/default/objects/Fm_Test_Dmo_Row__c/fields/timestamp__c.field-meta.xml
<CustomField>
    <fullName>timestamp__c</fullName>
    <description>Test stand-in for the GenAI DMO timestamp__c.</description>
    <label>timestamp</label>
    <type>DateTime</type>
</CustomField>