force-app/main/default/objects/Fm_Test_Dmo_Row__c/fields/totalTokens__c.field-meta.xml
<CustomField>
    <fullName>totalTokens__c</fullName>
    <description>Test stand-in for GenAIGatewayRequest__dlm.totalTokens__c.</description>
    <label>totalTokens</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>