force-app/main/default/objects/Fm_Test_Dmo_Row__c/fields/userId__c.field-meta.xml
<CustomField>
    <fullName>userId__c</fullName>
    <description>Test stand-in for GenAIGatewayRequest__dlm.userId__c.</description>
    <label>userId</label>
    <length>64</length>
    <type>Text</type>
</CustomField>