force-app/main/default/objects/Fm_Test_Dmo_Row__c/fields/value__c.field-meta.xml
<CustomField>
    <fullName>value__c</fullName>
    <description>Test stand-in for GenAIContentCategory__dlm.value__c.</description>
    <label>value</label>
    <length>120</length>
    <type>Text</type>
</CustomField>